clean up health endpoint
